@@ -99,8 +99,9 @@ class Circleguard:
             comparer = Comparer(d.steal_max_sim, compare1, replays2=compare2)
             yield from comparer.compare()
 
-        if Detect.RELAX in d or Detect.CORRECTION in d or Detect.MACRO in d:
-            if Detect.RELAX in d or Detect.MACRO in d:
+        if Detect.INVESTIGATION in d:
+            requires_beatmap = Detect.REQUIRES_BEATMAP in d
+            if requires_beatmap:
                 if not self.library:
                     # connect to library since it's a temporary one
                     library = Library(self.slider_dir.name)
@@ -110,12 +111,12 @@ class Circleguard:
             for replay in c.all_replays():
                 bm = None
                 # don't download beatmap unless we need it
-                if Detect.RELAX in d or Detect.MACRO in d:
+                if requires_beatmap:
                     bm = library.lookup_by_id(replay.map_id, download=True, save=True)
                 investigator = Investigator(replay, d, beatmap=bm)
                 yield from investigator.investigate()
 
-            if Detect.RELAX in d or Detect.MACRO in d:
+            if requires_beatmap:
                 if not self.library:
                     # disconnect from temporary library
                     library.close()
