@@ -3,3 +3,4 @@
 * Rename `Keys` to `Key` (`Keys` left available as deprecated)
 * Don't double load `ReplayInfo` when using `Map`
 * Rename `Detect` attributes to reflect the `Detect` class (eg, `max_angle` -> `correction_max_angle`). This avoids confusion of attributes when multiple `Detect`s are combined. Previous names left available as deprecated.
+* Add `Detect.INVESTIGATION`, `Detect.COMPARISON`, and `Detect.REQUIRES_BEATMAP` that can be tested against a `Detect` similarly to `Detect.STEAL in detect` (`Detect.REQUIRES_BEATMAP in detect`), to see if a detect contains an investigation (relax, aim correction, macro), a comparison (steal), or requires a beatmap download, respectively.
